[package]
name = "subway_map"
version = "0.1.0"
authors = ["Emily Crandall Fleischman <emilycf@mit.edu>"]
edition = "2018"

[dependencies]
regex-syntax = "0.6.3"
itertools = "0.8.2"
svg = "0.6.0"
thiserror = "1.0.21"
anyhow = "1.0.33"
serde = { version = "1.0.117", features = ["serde_derive"] }
serde_json = "1.0.59"
structopt = "0.3.20"
